<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Стрелочка назад -->
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- Поиск по списку слов -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/element_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        app:errorEnabled="true">

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/words_search"
            android:hint="@string/words_search"
            android:inputType="text"
            android:maxLength="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- список слов -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_word"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:layout_editor_absoluteX="5dp"
        app:layout_constraintTop_toBottomOf="@+id/element_name_container"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

    <!-- добавить новое слово -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/words_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>